# joke_generator

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  LOCAL_OPS.md  README.md  docker-compose.yml  run-local.sh
.github/workflows/: ci-cd.yaml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  logging_conf.py  models.py
backend/app/services/: joke_generator.py
backend/scripts/: evaluate.py  generate_test_data.py  synthetic_data.json
backend/tests/: test_e2e.py  test_main.py
charts/joke-creator/: Chart.yaml  values.yaml
charts/joke-creator/templates/: deployment-backend.yaml  deployment-frontend.yaml  postgres.yaml  secrets.yaml  service-backend.yaml  service-frontend.yaml
docs/: ARCHITECTURE.md
frontend/: Dockerfile  nginx.conf
frontend/static/: index.html  script.js  style.css
kubernetes/: backend.yaml  frontend.yaml  postgres.yaml  secrets.yaml
tutorials/: 01_FUNDAMENTALS.md  02_CONTAINERS.md  03_CLOUD_NATIVE.md
