[project]
name = "joke-creator-py"
version = "0.1.0"
description = "A production-grade joke creator API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openai>=1.14.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "slowapi>=0.1.9",
    "opik>=1.0.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "sqlmodel>=0.0.16",
    "asyncpg>=0.29.0",
    "prometheus-fastapi-instrumentator>=7.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
